# Rolling_dice_game

./: CMakeLists.txt  README.md  main.cpp  player_1.cpp  player_1.h  player_2.cpp  player_2.h  rolling.cpp  rolling.h  testing.cpp
